Have static files bundled

--- a/package.yaml
+++ b/package.yaml
@@ -9,6 +9,8 @@ copyright:           "2018 Author name here"
 extra-source-files:
 - README.md
 - ChangeLog.md
+data-files:
+    src/static/tsuro.css
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
